--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,107 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.app {
+  background-image: url("./assets/cold-bg.jpg");
+  background-position: bottom;
+  background-size: cover;
+  transition: 0.4s ease-out;
+}
+
+.app.warm {
+  background-image: url("./assets/warm-bg.jpg");
+}
+
+.main {
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.57)
+  );
+  min-height: 100vh;
+  padding: 20px 25px;
+}
+
+.search_box {
+  width: 100%;
+}
+
+.search_box .search_bar {
+  padding: 15px;
+  display: block;
+  border: none;
+  outline: none;
+  font-size: 20px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  width: 100%;
+  color: #313131;
+  background-color: rgb(240, 236, 236);
+  appearance: none;
+  border-radius: 10px;
+  box-shadow: 0px 3px rgba(0, 0, 0, 0.2);
+  transition: 0.4s ease;
+  z-index: 100;
+}
+
+.search_box .search_bar:focus {
+  background-color: white;
+  transform: scale(1.02);
+}
+
+.location_box {
+  margin-top: 60px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.location {
+  color: white;
+  font-size: 32px;
+  text-align: center;
+  font-weight: 600;
+  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+}
+
+.date {
+  color: white;
+  font-size: 18px;
+  text-align: center;
+  font-weight: 400;
+  margin-top: 10px;
+  text-shadow: 2px 2px rgba(50, 50, 70, 0.5);
+}
+
+.weather_box {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.temp {
+  background-color: rgba(255, 255, 255, 0.2);
+  display: block;
+  border-radius: 16px;
+  margin: 30px auto;
   color: white;
+  font-size: 22vw;
+  /* object-fit: contain; */
+  text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
+  font-weight: 900;
+  text-align: center;
+  padding: 16px;
+  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.weather {
+  color: white;
+  font-size: 48px;
+  font-weight: 700;
+  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
 }
